--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,4 +6,12 @@ body {
     justify-content: center;
     /* align-items: center; */
     overflow: hidden !important;
+    background-color: #ecf0f1;
+    color: #34495e;
+    font-family:  'Verdana', sans-serif;
+}
+
+.btn-link {
+    text-decoration: none;
+    // color: #9b59b6;
 }
